src/objects/Case_Alert__c.object
<CustomObject>
    <customHelpPage>Help_CaseAlert</customHelpPage>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guardianship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Alerts</relationshipLabel>
        <relationshipName>Case_Alerts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encrypted>true</encrypted>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <formula>Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <encrypted>true</encrypted>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>case_ID__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <label>Case Alert</label>
    <listViews>
        <fullName>All_Alerts</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Individual__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Alerts</label>
    </listViews>
    <listViews>
        <fullName>Open_alerts</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Individual__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open alerts</label>
    </listViews>
    <nameField>
        <encrypted>true</encrypted>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Alerts</pluralLabel>
    <recordTypes>
        <fullName>Collaborative</fullName>
        <active>true</active>
        <description>Collaborative Case Alerts will be shared with all support team members for this individual&apos;s case.</description>
        <label>Collaborative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restricted</fullName>
        <active>true</active>
        <description>Restricted Case Alerts will only be shared with the Navigator and the user who added the case alert.</description>
        <label>Restricted</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cant_edit_title_or_description</fullName>
        <active>false</active>
        <description>Can&apos;t_edit_title_or_description</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()), OR(
ISCHANGED( Name ),
ISCHANGED( Description__c )),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>You cannot edit the title or description fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>**丄具슞七풑 妶斏麛좶랒웇쟄颡ꁚ 苻膃炌緄饩怞떦橴鰀 蔵筫踱峬姷됴僦껓쓑 脇麳ꉳ嶓鲭萆菙麴言 尺珸奖췼믵殁勝癃谀 戩滂嘏跐瘋鞁삘퓵圀 塊釚쑭騭燮詐櫃뷖룑 呣늆恊랼昃냠먉쑣쟑 枸씻槬劜워憡滔摑껑 洇隄刈妾牌撕듣ꍄ뿑 裩獊漬峈뽘疍羑惛鄀 蔵筫踱峬姷됴僦껓쓑.&amp;\\ ䷀仄䷀䷀䷈56308!</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;STADD Navigator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Coordinator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;,
CreatedById &lt;&gt; $User.Id,    
Case__r.Owner:User.Id &lt;&gt; $User.Id 
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>